<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_height="match_parent"
    tools:context=".Halaman3Activity">

    <TextView
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="@string/menerima_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvnama"
        android:layout_marginTop="20dp"
        android:text="@string/data_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/tvnim"
        android:layout_marginTop="20dp"
        android:text="@string/data_nim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

  </LinearLayout>